- Fixed behaviour on Windows. Valentina asks about synchronization measurements twice.
- Fixed bug. Tape app saved default size value in wrong place.
- [#737] Valentina produces corrupted file if unite two pieces with pins.
- [#738] Bug in transformation over arc and elliptical arc.
- [#729] Moved Bezier curves can't be rotated.
- [#742] Valentina produces wrong seam allowance.

# Version 0.5.0 May 9, 2017
- [#581] User can now filter input lists by keyword in function wizard.
- [#24] User can now add labels with different information on the detail
- [#505] New installer script based on Inno Setup 5.
- Size of preferences dialog in both Valentina and Tape app is now preserved between sessions
- [#479] Preferences dialog is now extendable and when it is opened again, it will be resized to its previous size.
- [#508] Settings saved to INI files in different folders.
- [#193] Undeletable zombie arc objects.
- New feature. Groups.
- Tool "Curve intersect axis" store data about subpaths. 
- [#444] Length along Path seems not valid.
- Added new curve path segment variables. 
- Toggle ScrollHandDrag mode by clicking a middle mouse button.
- Added horizontal scrolling by pressiong Shift + mouse wheel.
- [#366] Update 'Point from Distance and Angle' tool to read distance and angle between points.
- [#395] Create Curve tool which uses point as control handle.
- pdftops updated to version 3.04.
- [#306] Layout generator optimization. Divide into strips.
- Fixed case with duplicate names of curves if they connect same points.
- [#216] Better powerful way creation curved path.
- Improved exporting to dxf. QPainterPath export as Polyline.
- Show additional message dialog if measurements was changed. Related to issue [#440].
- [#132] Intersect Curves.
- Added new languages Chinese (China), Portuguese (Brazil) and Greek (Greece).
- New icon for VAL file. Updated Tape logo. Updated ico for standard measurements.
- [#325] Check pattern for inverse compatibility.