@@ -43,7 +43,7 @@ class AddToCalc : public VUndoCommand
     Q_OBJECT
 public:
     AddToCalc(const QDomElement &xml, VAbstractPattern *doc, QUndoCommand *parent = nullptr);
-    virtual ~AddToCalc() Q_DECL_OVERRIDE;
+    virtual ~AddToCalc() =default;
     virtual void undo() Q_DECL_OVERRIDE;
     virtual void redo() Q_DECL_OVERRIDE;
 protected:
