@@ -43,6 +43,7 @@
 - [#738] Bug in transformation over arc and elliptical arc.
 - [#729] Moved Bezier curves can't be rotated.
 - [#742] Valentina produces wrong seam allowance.
+- [#743] Valentina doesn't update update pattern after adding item.
 
 # Version 0.5.0 May 9, 2017
 - [#581] User can now filter input lists by keyword in function wizard.
